[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanner-python-worker"
version = "0.1.0"
description = "Real-time tick processing, signal generation, and ML pipeline"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
# Expose all sub-packages directly (no top-level wrapper package)
packages = [
    "analytics",
    "calibrate",
    "calibration",
    "common",
    "confirmations",
    "core",
    "data",
    "domain",
    "geometry",
    "gpu",
    "handlers",
    "infra",
    "local_calibration",
    "metrics",
    "ml_analysis",
    "ml_core",
    "mt5_bridge",
    "news_pipeline",
    "of",
    "orderflow",
    "orderflow_services",
    "persistence",
    "publisher",
    "regime",
    "replay",
    "reports",
    "runners",
    "scoring",
    "services",
    "specs",
    "utilities",
    "utils",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Both prod tests and SoT tests are discoverable
testpaths = ["tests", "tick_flow_full/tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F"]
extend-select = ["S110"]  # try/except/pass
